installed icons packaged via NPM

--- a/src/i18n/locales/pt/translationPT.json
+++ b/src/i18n/locales/pt/translationPT.json
@@ -11,6 +11,10 @@
     "about": "Sobre Mim",
     "projects": "Projetos"
   },
+  "portfolio":{
+    "title": "Documentação do Portfólio",
+    "about" : "Visão Geral"
+  },
   "projects": {
     
   }
