fixed bugs, improved responsivity

--- a/src/i18n/locales/en/translationEN.json
+++ b/src/i18n/locales/en/translationEN.json
@@ -9,6 +9,7 @@
   "navbar":{
     "home": "Home",
     "about": "About Me",
+    "thisProject": "This Project",
     "projects": "Projects"
   },
   "portfolio":{
