images added and improvements

--- a/src/i18n/locales/en/translationEN.json
+++ b/src/i18n/locales/en/translationEN.json
@@ -13,10 +13,11 @@
     "bio2018": "I studied various subjects, completed my thesis, and finished my undergraduate degree in December 2018.",
     "bio2019": "The graduation ceremony took place in February 2019. Later that year, in December, I also started my own company specializing in manufacturing and selling denim clothing.",
     "bio2022": "In 2022, I decided to create a website to improve online sales. I returned to studying programming after a hiatus and created a website using WordPress. I found it better to create my own theme, so I used HTML5, CSS3, Bootstrap, and SASS. In August 2022, I started studying JavaScript, and in December, I began learning React.js.",
-    "bio2023": "In 2023, I continued to enhance my knowledge and skills, particularly in JavaScript. I continued studying React and started working on several projects, including this portfolio, which was entirely created using React.js.",
+    "bio2023": "In 2023, I continued to enhance my knowledge and skills, particularly in JavaScript. I continued studying React and started working on several projects, including this portfolio, which was entirely created using React.js. I also started a second graduation in July of Analysis and Systems development at Descomplica.",
     "education": "Education",
-    "educationItem1": "Computer Science at PUC-GO",
-    "educationItem2": "English - Achieve Language",
+    "educationItem1": "Computer Science at PUC-GO 2014-2018",
+    "educationItem2": "Analysis and Systems development at Descomplica - Ongoing",
+    "educationItem3": "English - Achieve Language 2009-2013",
     "softSkill1": "Self-awareness and self-learning",
     "softSkill2": "Time management",
     "softSkill3": "Emotional intelligence"
@@ -30,8 +31,8 @@
     "wasUsed": "What was used to create this portfolio",
     "components": "Components",
     "componentsText": "Talk about components",
-    "themeChange": "Theme Change",
-    "themeChangeText": "Talk about theme change",
+    "themeContext": "Theme Change",
+    "themeContextText": "Talk about theme change",
     "languageToggle": "Language Toggle / Internationalization (i18n)",
     "languageToggleText": "Talk about language toggle",
     "axios": "Usage of Axios for API",
