--- a/src/i18n/locales/pt/translationPT.json
+++ b/src/i18n/locales/pt/translationPT.json
@@ -13,10 +13,11 @@
     "bio2018": "Estudei diversas materias, realizei meu TCC e terminei a graduação em dezembro de 2018.",
     "bio2019": "A colação de grau foi feita em fevereiro de 2019, mais tarde naquele ano em dezembro também abri minha propria empresa de fabricação e venda de roupas jeans.",
     "bio2022": "Em 2022 decidi criar um site para melhorar as vendas online, então comecei a estudar programação novamente depois de um tempo longe da programação, então criei um site em wordpress, onde achei melhor criar meu proprio tema, então criei utilizando HTML5, CSS3, Bootstrap e SASS, em Agosto de 2022 comecei a estudar JavaScript e dezembro React.js.",
-    "bio2023": "Em 2023 continuei aperfeiçoando os conhecimentos e habilidades, principalmente em JavaScript, e continuei estudando React, onde comecei a fazer alguns projetos, incluindo esse portfolio que foi inteiramente criado com React.js.",
+    "bio2023": "Em 2023 continuei aperfeiçoando os conhecimentos e habilidades, principalmente em JavaScript, e continuei estudando React, onde comecei a fazer alguns projetos, incluindo esse portfolio que foi inteiramente criado com React.js. Também iniciei outra graduação em Julho de Análise e Desenvolvimento de Sistemas na Descomplica.",
     "education": "Formação",
-    "educationItem1": "Ciência da Computação na PUC-GO",
-    "educationItem2": "Inglês - Achieve Language",
+    "educationItem1": "Ciência da Computação na PUC-GO 2014-2018",
+    "educationItem2": "Análise e Desenvolvimento de Sistemas na Descomplica - Em andamento",
+    "educationItem3": "Inglês - Achieve Language 2009-2013",
     "softSkill1": "Autoconsciência e autoaprendizagem",
     "softSkill2": "Gestão do tempo",
     "softSkill3": "Inteligência emocional"
@@ -29,9 +30,9 @@
     "aboutText": "Meu projeto de portfólio é uma aplicação web que apresenta minha experiência, habilidades e projetos. É uma forma de apresentar meu trabalho e permitir que potenciais empregadores, clientes ou colaboradores conheçam mais sobre mim e meus projetos.",
     "wasUsed": "O que foi utilizado para criação desse portfólio",
     "components": "Componentes",
-    "componentsText": "Utilizei a componentização em React para dividir o codigo em multiplos trechos de codigo.",
-    "themeChange": "Troca de Temas",
-    "themeChangeText": "Falar a troca de tema",
+    "componentsText": "Utilizei a componentização em React para facilitar a reutilização de codigo e também aplicar boas praticas do React, que é reduzir a quantidade de codigo por componente para facilitar a manutenção de codigo.",
+    "themeContext": "Troca de Temas",
+    "themeContextText": "Foi utilizado o CreateContext e o Provider para a criação da troca de temas no Portfolio.",
     "languageToggle": "Troca de idioma/Internacionalização(i18n)",
     "languageToggleText": "Falar da troca de idioma",
     "axios": "Utilização de Axios para API",
