added translation to components and theme change

--- a/src/i18n/locales/en/translationEN.json
+++ b/src/i18n/locales/en/translationEN.json
@@ -30,9 +30,9 @@
     "aboutText": "My portfolio project is a web application that showcases my experience, skills, and projects. It is a way to present my work and allow potential employers, clients, or collaborators to learn more about me and my projects.",
     "wasUsed": "What was used to create this portfolio",
     "components": "Components",
-    "componentsText": "Talk about components",
-    "themeContext": "Theme Change",
-    "themeContextText": "Talk about theme change",
+    "componentsText": "I used componentization in React to facilitate code reuse and also to apply React best practices, which is to reduce the amount of code per component to make code maintenance easier.",
+    "themeContext": "Theme Switching",
+    "themeContextText": "CreateContext and Provider were used to implement theme switching in the Portfolio.",
     "languageToggle": "Language Toggle / Internationalization (i18n)",
     "languageToggleText": "Talk about language toggle",
     "axios": "Usage of Axios for API",
